--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -59,7 +59,9 @@ See https://stackoverflow.com/questions/22252472/how-can-i-change-the-color-of-a
   min-height: 0;
 }
  #menu {
-   display: none;
+   /* display: none; */
+   padding: 0rem 0rem 0rem 0rem;
+   line-height: normal;
  }
 /* .profile .profile_inner h1 {
   padding: 0 0 0 0;
