--- a/app/app.css
+++ b/app/app.css
@@ -1,28 +1,59 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: "DM Mono";
+  src: url("./fonts/DMMono-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 @theme {
   --font-sans:
-    "Inter", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    Alegreya, Garamond, "DejaVu Sans Mono", "Inter", ui-sans-serif, system-ui,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    "Noto Color Emoji";
   /* --font-sans: VT323, serif; */
+  --font-mono: "DM Mono", Iosevka, ui-monospace,Menlo,Monaco,monospace;
+  /* ui-monospace, "Iosevka", monospace; */
 
   /* custom colors */
   --color-red-my: #b7384b;
   --color-red-my-hover: #830c16;
+  --color-default-text: #e0e0e0;
+  /* --color-default-text: var(--color-stone-300); */
+}
+
+:root {
+  --color-darkest-dark: #000000;
+  --color-semi-dark: #0b0e14;
+}
+/* Code? box-shadow: inset 0 -1px 15px rgba(255,255,255,.15); */
+.expressive-code pre {
+  box-shadow: inset 0 -1px 10px rgba(255, 255, 255, 0.15) !important;
 }
 
 html,
 body {
+  /* font-family: "DejaVu Sans Mono", monospace; */
+  /* font-family: "Alegreya", serif; */
+  /* font-family: "Cormorant Garamond", serif; */
+  font-family: "EB Garamond", serif;
   .vt323-regular {
     font-family: "VT323", serif;
     font-weight: 400;
     font-style: normal;
   }
   /* @apply bg-white dark:bg-gray-900; */
-  @apply bg-white dark:bg-stone-950;
-  /* @apply bg-white dark:bg-black; */
+  background-color: #090109;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
+}
+.card {
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 1.0s;
+  cursor: pointer;
 }
