--- a/app/app.css
+++ b/app/app.css
@@ -30,7 +30,7 @@
 }
 /* Code? box-shadow: inset 0 -1px 15px rgba(255,255,255,.15); */
 .expressive-code pre {
-  box-shadow: inset 0 -1px 10px rgba(255, 255, 255, 0.15) !important;
+  box-shadow: inset 0 -1px 7px rgba(255, 255, 255, 0.08) !important;
 }
 
 html,
@@ -45,15 +45,19 @@ body {
     font-style: normal;
   }
   /* @apply bg-white dark:bg-gray-900; */
-  background-color: #090109;
+  /* background-color: #090109; */
+  background-color: black;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
 }
-.card {
-  position: relative;
-  transform-style: preserve-3d;
-  transition: transform 1.0s;
-  cursor: pointer;
-}
+/* 
+p::first-letter {
+  -webkit-initial-letter: 3;
+  initial-letter: 2;
+  padding-right: 0.3em;
+  /* font-weight: bold; */
+/* font-stretch: ultra-condensed; */
+/* color: var(--color-red-my); */
+/* }  */
