--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -61,3 +61,4 @@ p::first-letter {
 /* font-stretch: ultra-condensed; */
 /* color: var(--color-red-my); */
 /* }  */
+/* Desktop: Sidenote styling */
