--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,7 +2,14 @@
 
 @font-face {
   font-family: "DM Mono";
-  src: url("./fonts/DMMono-Regular.woff2") format("woff2");
+  src: url("/fonts/DMMono-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "EB Garamond";
+  src: url("/fonts/EBGaramond-VariableFont_wght.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -35,30 +42,18 @@
 
 html,
 body {
-  /* font-family: "DejaVu Sans Mono", monospace; */
-  /* font-family: "Alegreya", serif; */
-  /* font-family: "Cormorant Garamond", serif; */
   font-family: "EB Garamond", serif;
-  .vt323-regular {
-    font-family: "VT323", serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  /* @apply bg-white dark:bg-gray-900; */
-  /* background-color: #090109; */
+  /* font-family: "Inter", serif; */
   background-color: black;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
+  .expressive-code {
+    padding-top: 1rem;
+  }
+  .expressive-code .gutter .ln {
+    padding-inline: 0;
+    padding-inline-start: 2ch;
+  }
 }
-/* 
-p::first-letter {
-  -webkit-initial-letter: 3;
-  initial-letter: 2;
-  padding-right: 0.3em;
-  /* font-weight: bold; */
-/* font-stretch: ultra-condensed; */
-/* color: var(--color-red-my); */
-/* }  */
-/* Desktop: Sidenote styling */
