--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,26 +4,31 @@
 
 @font-face {
   font-family: "DM Mono";
-  src: local('DM Mono'), url("/fonts/DMMono-Regular.woff2") format("woff2");
+  src:
+    local("DM Mono"),
+    url("/fonts/DMMono-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "EB Garamond";
-  src: local('EB Garamond'), url("/fonts/EBGaramond-VariableFont_wght.ttf") format("truetype");
+  src:
+    local("EB Garamond"),
+    url("/fonts/EBGaramond-VariableFont_wght.ttf") format("truetype");
   font-weight: normal; /* Note: For variable fonts, weight/style here might be less critical if defined later */
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Departure Mono";
-  src: local('Departure Mono'), url("/fonts/DepartureMono-Regular.woff2") format("woff2");
+  src:
+    local("Departure Mono"),
+    url("/fonts/DepartureMono-Regular.woff2") format("woff2");
   font-weight: normal; /* Note: For variable fonts, weight/style here might be less critical if defined later */
   font-style: normal;
   font-display: swap;
 }
-
 
 @theme {
   --font-sans:
@@ -37,8 +42,8 @@
 
   /* custom colors */
   /* --color-red-my: #A12F3F;  */
-  --color-red-my-for-light: #A12F3F;
-  --color-red-my: #b7384b; 
+  --color-red-my-for-light: #a12f3f;
+  --color-red-my: #b7384b;
   --color-red-my-hover: #830c16;
   --color-default-text: #e0e0e0;
 }
@@ -48,7 +53,7 @@
   --color-semi-dark: #0b0e14;
   --shiki-dark-bg: #000000;
   --grid-line-light: rgba(0, 0, 0, 0.05);
-  
+
   /* Default (light mode) styles */
   background-color: white;
   color-scheme: light;
@@ -56,19 +61,20 @@
 
 /* Styles for dark mode */
 html.dark {
-    background-color: #0a0a0a0a !important; /* Use theme variable or specific color */
-    color-scheme: dark;
-    pre {
-      background-color: var(--shiki-dark-bg) !important;
-    }
-    .line,
-    .line span {
-      color: var(--shiki-dark) !important;
-      background-color: var(--shiki-dark-bg) !important;
-      font-style: var(--shiki-dark-font-style) !important;
-      font-weight: var(--shiki-dark-font-weight) !important;
-      text-decoration: var(--shiki-dark-text-decoration) !important;
-    }
+  background-color: #0a0a0a0a
+    !important; /* Use theme variable or specific color */
+  color-scheme: dark;
+  pre {
+    background-color: var(--shiki-dark-bg) !important;
+  }
+  .line,
+  .line span {
+    color: var(--shiki-dark) !important;
+    background-color: var(--shiki-dark-bg) !important;
+    font-style: var(--shiki-dark-font-style) !important;
+    font-weight: var(--shiki-dark-font-weight) !important;
+    text-decoration: var(--shiki-dark-text-decoration) !important;
+  }
 }
 
 /* Drop cap styling for paragraphs */
