--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -15,10 +15,10 @@
   font-family: "EB Garamond";
   src:
     local("EB Garamond"),
-    url("/fonts/EBGaramond-VariableFont_wght.ttf") format("truetype");
-  font-weight: normal; /* Note: For variable fonts, weight/style here might be less critical if defined later */
-  font-style: normal;
+    url("/fonts/EBGaramond-VariableFont_wght.ttf") format("truetype-variations");
+  font-style: normal italic;
   font-display: swap;
+  font-weight: 200 800;
 }
 
 @theme {
@@ -37,34 +37,56 @@
   --color-red-my: #b7384b;
   --color-red-my-hover: #830c16;
   --color-default-text: #e0e0e0;
+  --color-warm-white: #eeeee6;
+  --color-darkest-dark: #0a0a0a;
 }
 
 :root {
-  --color-darkest-dark: #000000;
   --color-semi-dark: #0b0e14;
-  --shiki-dark-bg: #000000;
+  --shiki-dark-bg: var(--color-darkest-dark);
+  --shiki-light-bg: var(--color-warm-white);
   --grid-line-light: rgba(0, 0, 0, 0.05);
 
   /* Default (light mode) styles */
-  background-color: white;
+  background-color: var(--color-warm-white);
   color-scheme: light;
 }
 
 /* Styles for dark mode */
 html.dark {
-  background-color: #0a0a0a0a
-    !important; /* Use theme variable or specific color */
+  background-color:var(--color-darkest-dark) !important;
   color-scheme: dark;
   pre {
-    background-color: var(--shiki-dark-bg) !important;
+    background-color: var(--color-darkest-dark) !important;
   }
   .line,
   .line span {
-    color: var(--shiki-dark) !important;
-    background-color: var(--shiki-dark-bg) !important;
-    font-style: var(--shiki-dark-font-style) !important;
-    font-weight: var(--shiki-dark-font-weight) !important;
-    text-decoration: var(--shiki-dark-text-decoration) !important;
+    background-color: var(--color-darkest-dark) !important;
+  }
+}
+
+html {
+  background-color:var(--color-warm-white) !important;
+  color-scheme: light;
+  pre {
+    background-color: var(--color-warm-white) !important;
+  }
+  .line,
+  .line span {
+    background-color: var(--color-warm-white) !important;
+  }
+}
+
+html,
+body {
+  font-family: "EB Garamond", serif;
+
+  .shiki .line > .line-number {
+    color: var(--color-gray-600) !important;
+    display: inline-block; /* Needed for text-align and width */
+    min-width: 2.5em; /* Adjust based on max expected digits */
+    text-align: right;
+    padding-inline-end: 1em; /* Space between number and code */
   }
 }
 
@@ -90,17 +112,4 @@ html.dark {
 
 html.dark .drop-cap::first-letter {
   color: var(--color-red-my);
-}
-
-html,
-body {
-  font-family: "EB Garamond", serif;
-
-  .shiki .line > .line-number {
-    color: var(--color-gray-600) !important;
-    display: inline-block; /* Needed for text-align and width */
-    min-width: 2.5em; /* Adjust based on max expected digits */
-    text-align: right;
-    padding-inline-end: 1em; /* Space between number and code */
-  }
 }
